--- a/src/composer.json
+++ b/src/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "laravel/laravel",
+    "name": "kingshark/xiaopay",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "DEMO Project",
     "keywords": [
-        "framework",
-        "laravel"
+        "laravel",
+        "api"
     ],
     "license": "MIT",
     "require": {
@@ -13,7 +13,8 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "ext-gmp": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
